plugins {
    id 'application'
    id 'java'
    id 'org.jsonschema2dataclass' version '4.2.0'
}
repositories {
    mavenCentral()
}

ext {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
    // Define main class
    javaMainClass = "edu.kit.metadatahub.doip.server.MetadataHub"
}

println "Building '${name}' version: ${version}"
println "Running gradle version: $gradle.gradleVersion"
println "JDK version: ${JavaVersion.current()}"

dependencies {
    // DOIP SDK
    implementation         'net.dona.doip:doip-sdk:2.1.0'
    // Logging
    implementation "org.slf4j:slf4j-api:1.7.32"
    implementation "ch.qos.logback:logback-classic:1.2.7"

    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
    implementation 'com.google.code.gson:gson:2.8.8'
    implementation 'com.jayway.jsonpath:json-path:2.6.0'
    // Apache Commons
    implementation 'commons-io:commons-io:2.11.0'
    // Spring Framework
    // https://mvnrepository.com/artifact/org.springframework/spring-web
    implementation 'org.springframework:spring-web:5.3.13'

  // see src/main/resources/json/external_dependencies.json
    implementation 'joda-time:joda-time:2.10.10'
    
}

sourceSets {
  main {
    java.srcDirs += file("${buildDir}/generated/sources/js2d/main")
  }
}

jsonSchema2Pojo {
  source.setFrom files("${project.rootDir}/src/main/resources/json/schema/")
  targetPackage = 'edu.kit.turntable.mapping'
  propertyWordDelimiters = '_'
}

application {
    mainClassName = javaMainClass
    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
        println 'Allow access to private methods of package java.security.cert...'
        applicationDefaultJvmArgs = ['--add-opens=java.base/java.security.cert=ALL-UNNAMED']
   }
}